Fixes #11 - Wrapping of text. Added + selectors for the varying label classes,

--- a/assets/css/foundation.css
+++ b/assets/css/foundation.css
@@ -6754,6 +6754,17 @@ body {
   float: left;
   margin-right: 10px;
 }
+.sidebar .label + span {
+  float: right;
+  width: 82%;
+  display: inline-block;
+}
+.sidebar .label.success + span {
+  width: 73%;
+}
+.sidebar .label.alert + span {
+  width: 80%;
+}
 .sidebar .side-nav .is-review {
   display: none;
 }
